--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@
 /*second version*/
 
 body {
-    margin: 0;
+    margin: 0 0;
+    padding: 0 0;
+    width: 100vw;
+    height: 100vh;
 }
 #clock-container {
     display: flex;
@@ -32,4 +35,16 @@ body {
     /* backdrop-filter: blur(50px rgb(236, 110, 110)); */
     text-shadow: 0px 0px 40px #eb4b4b;
     width: 100%;
+}
+
+@media only screen and (max-width:767px){
+    #clock-container {
+        width: 100vw;
+    }
+    
+    
+    #clock {
+        width: 100%;
+        font-size: 6.2em;
+    }
 }
